# thesisFinal

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CalibrationRoutine.cpp  CalibrationRoutine.hpp  Makefile  README.md  cmake_install.cmake  main.cpp  parameters.txt
Aruco/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
Aruco/RFmoduleAruCo-master/: CMakeLists.txt  README.md  arucoboard.thrift
Aruco/RFmoduleAruCo-master/include/: ARUCOBOARD_IDL.h  arucoboard.h
Aruco/RFmoduleAruCo-master/src/: ARUCOBOARD_IDL.cpp  arucoboard.cpp  main.cpp
Aruco/readingImage/: CMakeLists.txt  main.cpp
EKF/: ActiveSelectionEKF.cpp  ActiveSelectionEKF.hpp  CMakeCache.txt  CMakeLists.txt  ExtendedKalmanFilter.hpp  Makefile  cmake_install.cmake  hello  main.cpp  out.txt  outAL.txt  parameters.txt  tests  testsAL.cpp
NoiseEstimation/: CMakeLists.txt  MarkerNoiseEstimator.cpp  MarkerNoiseEstimator.hpp  main.cpp
arucoErrorPredictor/: ArucoErrorPredictor.hpp
iCub/: CMakeCache.txt  CMakeLists.txt  Makefile  Robot.cpp  Robot.hpp  cmake_install.cmake  hello  main.cpp
iCubGaze/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gaze.cpp  hello
iCubLimb/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  iCubLimb.cpp  iCubLimb.hpp  main.cpp
iCubVision/: ArucoDetector.cpp  ArucoDetector.hpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
iCubWorld/: CMakeCache.txt  CMakeLists.txt  Makefile  client.cpp  cmake_install.cmake  hello  main.cpp  simobjloader.cpp  simobjloader.h  worldclient.hpp
markerTests/: CMakeLists.txt  main.cpp
simobjloader/: CMakeLists.txt
simobjloader/app/conf/: simobjloader.ini
simobjloader/app/models/: marker.x  untitled.x3d
simobjloader/src/: main.cpp  simobjloader.cpp  simobjloader.h
utils/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  test.cpp  utils.cpp  utils.hpp
